2006-05-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Removed tests for init.d & sysconfig files.

	* munge.spec: Removed used of munge-files-aux list.
	* src/etc/Makefile.am: Removed tests for init.d & sysconfig dirs.

2006-05-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Removed use of "local" keyword for Solaris.

	* src/etc/munge.init: Added tests for distro release/version files in
	  service_init() to prevent SuSE from being recognized as Debian due to
	  existence of /sbin/start-stop-daemon.

	* PLATFORMS: Updated.

	* src/etc/munge.init: Replaced "echo -n" with "printf" for AIX.

	* src/etc/munge.init, src/etc/munge.sysconfig: Revamped.

2006-04-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Added Should-Start & Should-Stop LSB headers.
	  Changed return code for invalid or excess args to match LSB spec.
	  Changed return code for unimplemented feature to match LSB spec.
	  Tweaked comments & syntax.  Tweaked SuSE try-restart behavior.

	* munge.spec: Tweaked %post.

2006-03-07  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.2.

	* HISTORY, META, NEWS: Updated for 0.5.2 release.

	* munge.spec: Fixed so the files in the munge-devel & munge-libs RPMs
	  are permissioned properly.

2006-02-28  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.1.

	* HISTORY, META, NEWS: Updated for 0.5.1 release.

	* src/libcommon/license.c: Changed Munge to MUNGE.

	* src/munged/munged.c(main): Changed new logfile perms from 666 to 640.

2006-01-24  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.

	* HISTORY, META, NEWS, PLATFORMS: Updated for 0.5 release.

	* README: Updated.

	* munge.spec: Updated %files to include new documentation.

	* README.MULTILIB: Added.

	* QUICKSTART: Added.

2006-01-23  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Moved libmunge.so from libs back to devel subpackage.

	* src/munged/auth_recv.c: Updated for new munge message layer.