@@ -7,10 +7,13 @@
 include $(top_srcdir)/config/Make-inc.mk
 
 install-data-local:
-	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)/etc/init.d"; \
 	$(INSTALL) -m 755 $(srcdir)/munge.init \
-	  "$(DESTDIR)$(sysconfdir)/init.d/munge"; \
-	test -d "$(sysconfdir)/sysconfig" && d="sysconfig" || d="default"; \
-	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/$$d"; \
+	  "$(DESTDIR)/etc/init.d/munge"; \
+	test -d "/etc/sysconfig" && d="sysconfig" || d="default"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)/etc/$$d"; \
 	$(INSTALL) -m 755 $(srcdir)/munge.sysconfig \
-	  "$(DESTDIR)$(sysconfdir)/$$d/munge"
+	  "$(DESTDIR)/etc/$$d/munge"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)/var/lib/munge"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)/var/run/munge"; \
+	$(INSTALL) -m 700 -d "$(DESTDIR)/etc/munge"
